# mp3-player-tui

./: .gitignore  README.md  pyproject.toml
experiments/: test_audioplayer.py  test_playsound.py  test_pygame_audio.py
mp3_player_tui/: app.py  audio_cli.css  main.py
src/: main.py  websim.py
