[tool.poetry]
name = "mp3_player_tui"
version = "0.1.0"
description = ""
authors = ["kyrlian <kyrlian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.75.1"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mp3player = "mp3_player_tui.main:main"