[project]
name = "mp3-player-tui"
version = "0.1.0"
description = "mp3 player with textual TUI"
authors = [{name ="kyrlian", email= "kyrlian@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
    "textual>=0.81.0",
]

[project.scripts]
mp3player = "mp3_player_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"